src/test/deca/syntax/invalid/parser/tab_invalid.deca
// Utilisation invalide d'un tableau

// Date: 20.01.2022

{
    int tab[3]={1, 2, 3};
    println(tab[8]);
}